fix: mobile: extra padding on blog post list

--- a/assets/scss/_content.scss
+++ b/assets/scss/_content.scss
@@ -118,6 +118,7 @@
         max-height: 0;
         margin: 0;
         visibility: hidden;
+        overflow: hidden;
       }
       a.title {
         font-size: 1.8rem;
